# cookiecutter-richards-datascience

./: .gitmodules  README.md  cookiecutter.json  generate_template.sh  sync.sh
hooks/: post_gen_project.py  pre_gen_project.py
template-name/: .python-version  pyproject.toml
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/src/template_name/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
