[project]
name = "template-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Hajek", email = "richard.m.hajek@gmail.com" }
]
requires-python = ">={{cookiecutter.python_ver}}"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
